# pkmlc

./: CMakeLists.txt  Makefile  README.md
examples/modules/: sigmoid.hpp  sigmoid.pkmlm
examples/num_recog/: num_recog.pkml
examples/xor/: main.cu  output.hpp  run.sh  xor  xor.pkml
include/: logger.hpp  parser.hpp
include/cli/: options.hpp  parser.hpp
include/module/: module.hpp
output/: a.out  main.cpp
output/include/: pkml.hpp
output/include/pkml/: dimension.hpp  math.hpp  parameter.hpp  thread_gate.hpp
output/instance_cifar10/: Makefile  a.out  cifar10.hpp  cifar10.pkml  main.cpp  out  output.cu  output.hpp
output/instance_cifar10/modules/fully_connected.pkmlm/: fully_connected.hpp  manifest.json
output/instance_cifar10/modules/relu.pkmlm/: manifest.json
output/instance_cifar10/modules/sigmoid.pkmlm/: sigmoid.hpp
output/instance_cifar10/modules/tanh.pkmlm/: manifest.json  tanh.hpp
output/instance_xor/: Makefile  _output.cu  _output.hpp  main.cpp  out  output.cu  output.hpp  xor.csv  xor.pkml
output/instance_xor/modules/fully_connected.pkmlm/: fully_connected.hpp
output/instance_xor/modules/relu.pkmlm/: relu.hpp
output/instance_xor/modules/sigmoid.pkmlm/: manifest.json
source/: CMakeLists.txt  main.cpp
source/cli/: options.cpp  parser.cpp
